# Trigger

./: .gitignore  README.md  filter.html  handler.html  index.html  interrupt.html  message.html  pyproject.toml  trigger.html
.github/workflows/: main.yml
mirai_extensions/trigger/: __init__.py  filter.py  handler.py  index.html  interrupt.html  interrupt.py  message.py  trigger.py  utils.html  utils.py
trigger/: handler.html  index.html  interrupt.html  trigger.html
